# chiaki-ng-for-Android

./: CMakeLists.txt
.github/workflows/: android.yml
android/: .gitignore  build.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle
android/app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: chiaki-jni.c  openssl_ui_stubs.c
android/app/src/main/java/com/metallic/chiaki/common/: RegisteredHost.kt
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
lib/: CMakeLists.txt
lib/include/chiaki/remote/: holepunch.h
lib/src/: thread.c
lib/src/remote/: holepunch.c  ps_helpers.c
